(lang dune 3.15)

(name ledger)

(generate_opam_files true)

(source
 (github ArtemiszenN/ledger))

(authors "Artemis")

(license idk:sob:)

(package
 (name ledger)
 (synopsis "Tracks who owes who money (and how much)")
 (description "errrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
